--- a/biostyle.css
+++ b/biostyle.css
@@ -5,12 +5,42 @@ h1 {
     text-align: center;
     color: white
 }
+
+body {
+    padding: 0px;
+    margin: 0px;
+    background: lightgray;
+    color: #333
+}
+
+#bio-image {
+    float: left;
+    width: 200px;
+    height: 200px;
+    margin-right: 10px;
+}
+
+.container {
+    width: 1024px;
+    margin: auto
+}
+
+#contact-info {
+    float: left;
+    width: 30%;
+}
+
+#main-bio {
+    float: left;
+    width: 70%;
+}
+
 /*
  First External CSS Stylesheet
  */
 
 /* Styling for HTML elements */
-body {
+/* body {
     padding: 0;
     margin: 0;
     font-family: Georgia, "Times New Roman", Times, serif;
@@ -24,14 +54,14 @@ body {
     background: #333;
   }
   
-  /* h1 {
+  h1 {
     padding: 20px 0;
     margin: 0;
     margin-bottom: 20px;
     font-size: 28px;
     color: #eee;
     text-align: center;
-  } */
+  } 
   
   h2 {
     font-size: 24px;
@@ -41,13 +71,11 @@ body {
     color: #d21034;
   }
   
-  /* Selecting elements by class */
   .container {
     width: 1024px;
     margin: 0 auto;
   }
   
-  /* Selecting elements by ID */
   #main-bio,
   #contact-info,
   #bio-image {
@@ -76,4 +104,22 @@ body {
     width: 200px;
     height: 200px;
     margin-right: 20px;
-  }  
+  }
+
+  table {
+    border-collapse: collapse;
+    border-color: gray;
+    border-width: 5px
+  }
+
+.bigHeader {
+    font-size: 50px
+}
+
+.mediumHeader {
+    font-size: 30px
+}
+
+.smallHeader {
+    font-size: 15px
+} */
